--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/public/app.css" />
+    <title id="page_title">Theta Explorer</title>
+    <!-- <link href="/icons/logo-icon.png" rel="shortcut icon"> -->
   </head>
   <body>
-    <div id="app"></div>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div class="theta-app" id="root"></div>
     <script type="text/javascript" src="/public/bundle.js" charset="utf-8"></script>
   </body>
 </html>
