Update favicon file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/public/app.css" />
+    <link rel="stylesheet" type="text/html" href="/public/styles.scss" />
     <title id="page_title">Theta Explorer</title>
-    <!-- <link href="/icons/logo-icon.png" rel="shortcut icon"> -->
+    <link href="/public/favicon.png" rel="icon" type="image/png">
   </head>
   <body>
     <noscript>
