--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/html" href="/public/styles.scss" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title id="page_title">Theta Explorer</title>
-    <link href="/public/favicon.png" rel="icon" type="image/png">
+    <link href="/favicon.png" rel="icon" type="image/png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+
     <div class="theta-app" id="root"></div>
-    <script type="text/javascript" src="/public/bundle.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/app.js" charset="utf-8"></script>
   </body>
 </html>
