--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
 
-    <div class="theta-app" id="root"></div>
+    <div id="app-root"></div>
     <script type="text/javascript" src="/js/app.js" charset="utf-8"></script>
   </body>
 </html>
