Add cache busting

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
   </noscript>
 
   <div id="app-root"></div>
-  <script type="text/javascript" src="/js/app.js" charset="utf-8"></script>
+  <script type="text/javascript" src="/js/app.[contenthash].js" charset="utf-8"></script>
   <script>
     document.addEventListener('copy', function (e) {
       let text = window.getSelection().toString().trim();
