Add cache busting

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,5 +26,5 @@
         e.preventDefault()
       })
     </script>
-  </body>
+  <script src="/js/app.a9e1f2c5f0d7f4e31474.js"></script></body>
 </html>
