--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="Theta Explorer allows you to explore and search the Theta blockchain for blocks, transactions, addresses, stakes and other activities taking place on Theta"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
 
   <body>
